syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Ism.Storage.Common.Core.Configuration.Proto";

package storage;

service ConfigurationStorage {
  rpc GetConfiguration (GetConfigurationRequest) returns (GetConfigurationResponse);
  rpc SaveConfiguration (SaveConfigurationRequest) returns (google.protobuf.Empty);
}

// Type Messages

message ConfigurationContextMessage {
    google.protobuf.StringValue departmentId = 1;
    google.protobuf.StringValue systemId = 2;
    google.protobuf.StringValue userId = 3;
}

message ConfigurationSaveContextMessage {
    ConfigurationKindMessage kind = 1;
    google.protobuf.StringValue id = 2;
}

// Enums

enum ConfigurationKindMessage {
    Site = 0;
    Department = 1;
    System = 2;
    User = 3;
}

// Request Messages

message GetConfigurationRequest {
    string section = 1;
    uint32 version = 2;
    ConfigurationContextMessage context = 3;
}

message SaveConfigurationRequest {
    string section = 1;
    uint32 version = 2;
    string configurationJson = 3;
    ConfigurationSaveContextMessage context = 4;
}

// Response Messages

message GetConfigurationResponse {
    bool success = 1;
    google.protobuf.StringValue configurationJson = 2;
}
